@@ -40,6 +40,11 @@ All (GUI):
 - Fix wxRearrangeList::Check() which asserted and misbehaved before.
 - Optimized wxRTC insertion and deletion when floating objects are present.
 - Added on-demand image loading option to wxRTC.
+- Add wxFont::GetBaseFont() (Melroy Tellis).
+- Update included Scintilla to version 3.3.9 (Christian Walther).
+- Add support for loading old V1 BMP files to wxImage (Artur Wieczorek).
+- Improve auto sizing of wrapped cells in wxGrid (iwbnwif).
+- Fix handling of rectangular selections in wxStyledTextCtrl (roberto).
 
 wxGTK:
 
